src/objects/PSA_Project_Revenue__c.object
<CustomObject>
    <description>The PSA Project Revenue object will be the destination for monthly revenue values for PSA projects, calculated in Intacct.  Apex code related to the PSA Revenue Stage object will insert revenue amounts into this object as they are received.</description>
    <fields>
        <fullName>PSA_Expense_Revenue_Amount__c</fullName>
        <description>The expense revenue amount to apply to the project, calculated in Intacct</description>
        <label>Expense Revenue Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Month_Ending__c</fullName>
        <description>End date of the month to which the revenue amount applies</description>
        <formula>PSA_Time_Period__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Project__c</fullName>
        <description>The Id (record name) of the project to update (e.g., “PR-1923”) with revenue information. This is used for lookup of the project</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>PSA Project Revenue</relationshipLabel>
        <relationshipName>PSA_Project_Revenue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSA_Services_Revenue_Amount__c</fullName>
        <description>The services revenue amount to apply to the project, calculated in Intacct</description>
        <label>Services Revenue Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Id (record name) of the time period with revenue information.  This is used for lookup of the time period</description>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>PSA Project Revenue</relationshipLabel>
        <relationshipName>PSA_Project_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PSA Project Revenue</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Project Revenue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Project Revenue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>